grammars/ballerina/grammar.js
        source_file: $ => $.module_part,
        module_part: $ => seq(repeat($.import_decl), repeat1($.module_defn)),
        module_defn: $ => choice(
            $.function_defn,
            $.const_defn,
            $.type_defn,
            $.module_var_decl,
            $.listener_decl,
            $.class_defn,
            $.enum_decl,
            $.service_defn,
            $.xmlns_decl_stmt,
            $.annotation_decl,
        ),
        function_defn: $ => seq(optional($.metadata), optional("public"),
            optional($.function_quals),
            "function",
            $.identifier,
            $.signature,
            choice($.stmt_block,
                $.expr_function_body,
                $.external_function_body)),
        signature: $ => prec(3, seq("(", optional($.param_list), ")", optional(seq("returns", $.type_desc)))),

        class_member: $ => choice(
            $.object_field,
            $.method_defn,
            $.remote_method_defn,
            $.object_type_inclusion
        ),
        object_field: $ => seq(
            optional($.metadata),
            optional(choice("public", "private")),
            optional("final"),
            $.type_desc,
            $.identifier,
            (optional(seq("=", $.expression))),
            ";"),
        type_defn: $ => seq(optional($.metadata), optional("public"), "type", $.identifier, $.type_desc, ";"),
        type_desc: $ => prec(1, choice(
            $.union_type_desc,
            $.intersection_type_desc,
            $.postfix_type_desc,
            $.object_type_desc,
            $.function_type_desc
        )),
        postfix_type_desc: $ => choice(
            $.primary_type_desc,
            $.optional_type_desc,
            $.array_type_desc
        ),

        primary_type_desc: $ => choice(
            $.nil_type_desc,
            $.singleton_type_desc,
            seq("(", $.type_desc, ")"),
            $.type_reference,
            $.error_type_desc,
            $.builtin_type_name,
            $.map_type_desc,
            $.stream_type_desc,
            $.future_type_desc,
            $.table_type_desc,
            $.record_type_desc,
            $.tuple_type_desc
        ),

        builtin_type_name: $ => prec.left(choice(
            "any",
            "anydata",
            "boolean",
            "byte",
            "decimal",
            "error",
            "float",
            "future",
            "handle",
            "int",
            "json",
            "never",
            "readonly",
            "stream",
            "string",
            "typedesc",
            "xml",
        )),

        type_reference: $ => prec(3, choice(
            $.identifier,
            $.qualified_identifier,
            $.builtin_type_qualified_identifier
        )),
        // This is a hack to make types like string:Char to work
        // otherwise it will match up the string and break
        table_key_specifier: $ => seq("key", "(", $.identifier, repeat(seq(",", $.identifier)), ")"),

        field_name: $ => $.identifier,
        tuple_type_desc: $ => seq("[", $.tuple_member_type_desc_list, "]"),
        tuple_member_type_desc_list: $ => choice(
            seq($.type_desc, repeat(seq(",", $.type_desc)), optional(seq(",", $.tuple_rest_desc))),
            $.tuple_rest_desc
        ),
        param_list: $ => choice(seq($.param, repeat(seq(",", $.param)), repeat(seq(",", $.defaultable_param)), repeat(seq(",", $.include_record_param)), optional(seq(",", $.rest_param))),
                                seq($.defaultable_param, repeat(seq(",", $.defaultable_param)), repeat(seq(",", $.include_record_param)), optional(seq(",", $.rest_param))),
                                $.rest_param),
        param: $ => seq($.type_desc, optional($.identifier)),
        stmt_block: $ => seq("{", repeat($.statement), "}"),

        statement: $ => choice(
            $.local_no_init_var_decl_stmt,
            $.local_var_decl_stmt,
            $.call_stmt,
            $.assign_stmt,
            $.compound_assign_stmt,
            $.destructuring_assign_stmt,
            $.worker_send_stmt,
            $.return_stmt,
            $.if_else_stmt,
            $.while_stmt,
            $.break_stmt,
            $.continue_stmt,
            $.foreach_stmt,
            $.panic_stmt,
            $.match_stmt,
            $.do_stmt,
            $.fail_stmt,
            $.xmlns_decl_stmt,
            $.lock_stmt,
            $.transaction_stmt,
            $.rollback_stmt,
            $.retry_stmt,
            $.fork_stmt,
            $.worker_declaration
        ),

        local_var_decl_stmt: $ => seq(optional("final"), $.typed_binding_pattern, "=", $.expression, ";"),
        binding_pattern: $ => choice(
            $.identifier,
            $.wildcard_binding_pattern,
            $.list_binding_pattern,
            $.mapping_binding_pattern,
            $.error_binding_pattern
        ),

        assign_stmt: $ => seq($.lvexpr, "=", $.expression, ";"),
        lvexpr: $ => prec(1, choice(
            $.variable_reference_expr,
            $.field_access_lvexpr,
            $.member_access_lvexpr,
        )),
        variable_reference_expr: $ => $.identifier,
        return_stmt: $ => seq("return", optional($.expression), ";"),

        expression: $ => choice(
            $.new_expression,
            $.let_expr,
            $.anonymous_function_expr,
            $.arrow_function_expr,
            $.worker_receive_expression,
            $.natural_expr,
            $.object_constructor_expr,
            $.inner_expr,
            $.type_cast_expr,
            $.list_constructor_expr,
            $.mapping_constructor_expr,
            $.query_expr,
            $.checking_expr,
            $.trap_expr,
            $.start_expr,
            $.wait_expr,
            $.flush_expr,
            $.table_constructor_expr,
            "?"
        ),

        template_expression: $ => choice(
            $.string_template_expression,
            $.xml_template_expression,
            $.raw_template_expression,
            $.regexp_template_expression,
        ),

        new_expression: $ => choice($.explicit_new_expression, $.implicit_new_expression),
        explicit_new_expression: $ => seq("new", $.const_reference_expr, $.arg_list),
        const_reference_expr: $ => prec(1, choice($.identifier, $.qualified_identifier)),

        inner_expr: $ => prec.left(choice(
            $.logical_expr,
            $.logical_not_expr,
            $.nil_lifted_expr,
            $.equality_expr,
            $.relational_expr,
            $.type_test_expr,
            $.typeof_expr,
            $.primary_expr
        )),
        nil_lifted_expr: $ => choice(
            $.binary_bitwise_expr,
            $.shift_expr,
            $.additive_expr,
            $.multiplicative_expr,
            $.unary_numeric_expression
        ),
        additive_expr: $ => prec.left(choice(
            seq($.expression, "+", $.expression),
            seq($.expression, "-", $.expression),
        )),
        multiplicative_expr: $ => prec.left(choice(
            seq($.expression, "*", $.expression),
            seq($.expression, "/", $.expression),
            seq($.expression, "%", $.expression)
        )),
        unary_numeric_expression: $ => prec.left(choice(
            seq("-", $.expression),
            seq("+", $.expression),
            seq("~", $.expression),
        )),
        primary_expr: $ => choice(
            $.literal,
            $.error_constructor_expr,
            $.member_access_expr,
            $.field_access_expr,
            $.call_expr,
            $.variable_reference_expr,
            $.conditional_expr,
            $.template_expression,
            seq("(", $.inner_expr, ")")
        ),

        query_expr: $ => prec.left(seq(optional($.query_construct_type), $.query_pipeline, choice($.select_clause, $.collect_clause), optional($.on_conflict_clause))),
        query_construct_type: $ => choice(
            "map",
            "stream",
            seq("table", optional($.table_key_specifier))
        ),
        query_pipeline: $ => seq($.from_clause, repeat($.intermediate_clause)),
        from_clause: $ => seq("from", $.typed_binding_pattern, "in", $.expression),

        select_clause: $ => prec.left(seq("select", $.expression)),

        typed_binding_pattern: $ => seq($.inferable_type_desc, $.binding_pattern),
        inferable_type_desc: $ => choice("var", $.type_desc),

        let_var_decl: $ => seq($.typed_binding_pattern, "=", $.expression),

        literal: $ => prec(1, choice(
            $.nil_literal,
            $.boolean_literal,
            $.int_literal,
            $.floating_point_literal,
            $.string_literal
        )),
        error_constructor_expr: $ => seq("error", optional($.type_reference), $.arg_list),
        arg_list: $ => seq(
            "(",
            optional(seq(
                $._arg,
                repeat(seq(",", $._arg))
            )),
            ")"
        ),
        _arg: $ => choice(
            $.named_arg,
            $.rest_arg,
            $.positional_arg
        ),
        positional_arg: $ => $.expression,
        named_arg: $ => seq($.identifier, "=", $.expression),
        qualified_identifier: $ => seq($.module_prefix, ":", $.identifier),
        module_prefix: $ => prec(2, choice($.identifier)),

        variable_reference_expr: $ => choice(
            $.identifier,
            $.qualified_identifier
        ),

        conditional_expr: $ => choice(
            $.ternary_conditional_expr,
            $.nil_conditional_expr
        ),
        ternary_conditional_expr: $ => prec.left(seq($.expression, "?", $.expression, ":", $.expression)),
        int_literal: $ => prec(1, choice(
            $.decimal_number,
            $.hex_int_literal
        )),
        decimal_number: $ => choice(
            "0",
            seq($.non_zero_digit, repeat($.digit))
        ),
        non_zero_digit: $ => /[1-9]/,
        digit: $ => /[0-9]/,
        identifier: $ => /'?[A-Za-z][A-Za-z0-9_]*/,
        string_literal: $ => $.double_quoted_string_literal,
        back_tick_string: $ => seq("`", optional($.back_tick_body), "`"),
        back_tick_body: $ => repeat1(choice(
            $.template_substitution,
            $.back_tick_content
        )),
        back_tick_content: $ => choice(
            /[^`$]+/,
            "$"
        ),
        double_quoted_string_literal: $ => seq('"', optional($.string_body), '"'),
        string_body: $ => repeat1(choice(token.immediate(prec(1, /[^\\"\n]+/)), $.string_escape)),
        list_binding_pattern: $ => seq("[", optional($.list_binding_pattern_members), "]"),
        list_binding_pattern_members: $ => choice(
            seq($.binding_pattern, repeat(seq(",", $.binding_pattern)), optional(seq(",", $.rest_binding_pattern))),
            $.rest_binding_pattern
        ),
        rest_binding_pattern: $ => seq("...", $.identifier),

        mapping_binding_pattern: $ => seq("{", optional($.mapping_binding_pattern_members), "}"),
        mapping_binding_pattern_members: $ => choice(
            seq($.field_binding_pattern, repeat(seq(",", $.field_binding_pattern)), optional(seq(",", $.rest_binding_pattern))),
            $.rest_binding_pattern
        ),
        field_binding_pattern: $ => choice(
            seq($.field_name, ":", $.binding_pattern),
            $.identifier
        ),

        error_binding_pattern: $ => seq(
            "error",
            optional($.type_reference),
            "(",
            optional($.error_binding_pattern_members),
            ")"
        ),
        error_binding_pattern_members: $ => choice(
            seq(
                $.binding_pattern,
                optional(seq(
                    ",",
                    $.binding_pattern,
                    repeat(seq(",", $.error_detail_binding_pattern)),
                    optional(seq(",", $.rest_binding_pattern))
                )),
                optional(seq(
                    ",",
                    $.error_detail_binding_pattern,
                    repeat(seq(",", $.error_detail_binding_pattern)),
                    optional(seq(",", $.rest_binding_pattern))
                ))
            ),
            seq(
                $.error_detail_binding_pattern,
                repeat(seq(",", $.error_detail_binding_pattern)),
                optional(seq(",", $.rest_binding_pattern))
            ),
            $.rest_binding_pattern
        ),
        error_detail_binding_pattern: $ => seq(
            $.identifier,
            "=",
            $.binding_pattern
        ),

        arrow_function_expr: $ => prec(-1, seq(
            optional($.function_quals),
            $.arrow_param_list,
            "=>",
            $.expression
        )),

        arrow_param_list: $ => choice(
            $.identifier,
            seq("(", optional($.param_list), ")"),
            seq("(", $.identifier, repeat(seq(",", $.identifier)), ")")
        ),

        worker_send_stmt: $ => seq(
            $.expression,
            choice("->", "->>"),
            choice($.identifier, "function"),
            ";"
        ),

        worker_receive_expression: $ => prec(9, seq(
            "<-",
            choice(
                $.identifier,
                "function",
                $.multiple_worker_receive,
                $.alternate_worker_receive
            )
        )),

        multiple_worker_receive: $ => seq("{", $.receive_fields, "}"),
        receive_fields: $ => seq($.receive_field, repeat(seq(",", $.receive_field))),
        receive_field: $ => seq($.identifier, ":", $.identifier),

        error_type_desc: $ => seq("error", "<", $.type_desc, ">"),

        regexp_template_expression: $ => seq("re", $.back_tick_string),

        object_constructor_expr: $ => seq(
            optional(choice("client", "isolated", "service")),
            "object",
            "{",
            repeat($.class_member),
            "}"
        ),

        let_expr: $ => prec(9, seq(
            "let",
            $.let_var_decl,
            repeat(seq(",", $.let_var_decl)),
            "in",
            $.expression
        )),

        logical_not_expr: $ => prec(9, seq("!", $.expression)),
