grammars/ballerina/test/corpus/expr.txt
================================================================================
New expression
================================================================================

function foo() {
   var dPrinter = new d:HtmlPrinter(errorFilename);
   dPrinter = new d:HtmlPrinter(errorFilename);
}

--------------------------------------------------------------------------------

(source_file
  (module_part
    (module_defn
      (function_defn
        (identifier)
        (signature)
        (stmt_block
          (statement
            (local_var_decl_stmt
              (typed_binding_pattern
                (inferable_type_desc)
                (binding_pattern
                  (identifier)))
              (expression
                (new_expression
                  (explicit_new_expression
                    (const_reference_expr
                      (qualified_identifier
                        (module_prefix
                          (identifier))
                        (identifier)))
                    (arg_list
                      (positional_arg
                        (expression
                          (inner_expr
                            (primary_expr
                              (variable_reference_expr
                                (identifier))))))))))))
          (statement
            (assign_stmt
              (lvexpr
                (variable_reference_expr
                  (identifier)))
              (expression
                (new_expression
                  (explicit_new_expression
                    (const_reference_expr
                      (qualified_identifier
                        (module_prefix
                          (identifier))
                        (identifier)))
                    (arg_list
                      (positional_arg
                        (expression
                          (inner_expr
                            (primary_expr
                              (variable_reference_expr
                                (identifier)))))))))))))))))

================================================================================
Ternary expression
================================================================================
function foo(boolean a) returns int {
    return a ? 1 : 2;
}
--------------------------------------------------------------------------------

(source_file
  (module_part
    (module_defn
      (function_defn
        (identifier)
        (signature
          (param_list
            (param
              (type_desc
                (postfix_type_desc
                  (primary_type_desc
                    (builtin_type_name))))
              (identifier)))
          (type_desc
            (postfix_type_desc
              (primary_type_desc
                (builtin_type_name)))))
        (stmt_block
          (statement
            (return_stmt
              (expression
                (inner_expr
                  (primary_expr
                    (conditional_expr
                      (ternary_conditional_expr
                        (expression
                          (inner_expr
                            (primary_expr
                              (variable_reference_expr
                                (identifier)))))
                        (expression
                          (inner_expr
                            (primary_expr
                              (literal
                                (int_literal
                                  (decimal_number
                                    (non_zero_digit)))))))
                        (expression
                          (inner_expr
                            (primary_expr
                              (literal
                                (int_literal
                                  (decimal_number
                                    (non_zero_digit)))))))))))))))))))
